# macos-local-voice-agents

./: .gitignore
server/: bot.py  kokoro_worker.py  opus_serializer.py  pyproject.toml  qwen3tts_worker.py  session_logger.py  test_tool_calls.py  tts_mlx_isolated.py
